# image-convolution-2-sem

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
src/: edge_processing.py  grayscale.py  kernels.py  main.py
tests/: test_convolution.py
