[project]
name = "image-convolution"
version = "0.1.0"
description = "Image convolution with edge processing"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy",
    "pillow",
]

[dependency-groups]
dev = [
    "black==24.3.0",
    "flake8==7.0.0",
    "mypy==1.9.0",
    "pytest==9.0.2",
]

[tool.black]
line-length = 88
target-version = ['py312', 'py313']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]